# snowglobe

./: Cargo.toml  README.md  build.rs
src/: globe_ref.aseprite  main.rs
src/shaders/: basic.frag  basic.vert  debug.frag  debug.vert  stencil.frag
