[package]
name = "snowglobe"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
bytemuck = { version = "1.18.0", features = ["derive"] }
glam = "0.29.0"
glow = "0.14.0"
image = "0.25.2"
rapier2d = { version = "0.22.0", features = ["debug-render"] }
sdl3-sys = "0.0.9"
rand = "0.8.5"

[build-dependencies]
cmake = "0.1.51"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
OriginalFilename = "snowglobe.exe"